@@ -4,10 +4,7 @@ import com.yuanno.soulsawakening.BeRegistry;
 import com.yuanno.soulsawakening.Main;
 import com.yuanno.soulsawakening.abilities.SoulSocietyKeyAbility;
 import com.yuanno.soulsawakening.abilities.elements.fire.*;
-import com.yuanno.soulsawakening.abilities.elements.heal.HealingTouchAbility;
-import com.yuanno.soulsawakening.abilities.elements.heal.RevitilazingAuraAbility;
-import com.yuanno.soulsawakening.abilities.elements.heal.SecondChanceAbility;
-import com.yuanno.soulsawakening.abilities.elements.heal.SelfHealingAbility;
+import com.yuanno.soulsawakening.abilities.elements.heal.*;
 import com.yuanno.soulsawakening.abilities.elements.lunar.LunarBlessingAbility;
 import com.yuanno.soulsawakening.abilities.elements.lunar.LunarCrescentAbility;
 import com.yuanno.soulsawakening.abilities.elements.lunar.LunarWaveAbility;
@@ -57,7 +54,7 @@ public class ModAbilities {
     public static final DeferredRegister<Ability> ABILITIES = DeferredRegister.create(ModRegistries.ABILITIES, Main.MODID);
     public static final Ability[] DARK_ZANPAKUTO = new Ability[] {DarkStepAbility.INSTANCE, ShadowAttackAbility.INSTANCE, UmbralCloakAbility.INSTANCE, DarkBallAbility.INSTANCE, ShadowCloneAbility.INSTANCE};
     public static final Ability[] FIRE_ZANPAKUTO = new Ability[] {FireAttackAbility.INSTANCE, FireWaveAbility.INSTANCE, FireBallAbility.INSTANCE, FireCoatAbility.INSTANCE, FireProwessAbility.INSTANCE};
-    public static final Ability[] HEAL_ZANPAKUTO = new Ability[] {HealingTouchAbility.INSTANCE, RevitilazingAuraAbility.INSTANCE, SelfHealingAbility.INSTANCE, SecondChanceAbility.INSTANCE};
+    public static final Ability[] HEAL_ZANPAKUTO = new Ability[] {HealingTouchAbility.INSTANCE, RevitilazingAuraAbility.INSTANCE, SelfHealingAbility.INSTANCE, SecondChanceAbility.INSTANCE, DamageHealAbility.INSTANCE};
     public static final Ability[] THUNDER_ZANPAKUTO = new Ability[] {ThunderStepAbility.INSTANCE, ThunderAttackAbility.INSTANCE, ThunderStrikeAbility.INSTANCE};
     public static final Ability[] LUNAR_ZANPAKUTO = new Ability[] {LunarBlessingAbility.INSTANCE, LunarCrescentAbility.INSTANCE, LunarWaveAbility.INSTANCE};
     public static final Ability[] NORMAL_ZANPAKUTO = new Ability[] {NormalBuffAbility.INSTANCE};
